--- a/EmployeeDatabase/Dockerfile
+++ b/EmployeeDatabase/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
+ARG BUILD_CONFIGURATION=Debug
 WORKDIR /src
-COPY ["EmployeeDatabase/EmployeeDatabase.csproj", "EmployeeDatabase/"]
-RUN dotnet restore "./EmployeeDatabase/EmployeeDatabase.csproj"
+COPY ["EmployeeDatabase.csproj", "/"]
+RUN dotnet restore "./EmployeeDatabase.csproj"
 COPY . .
 WORKDIR "/src/EmployeeDatabase"
 RUN dotnet build "./EmployeeDatabase.csproj" -c $BUILD_CONFIGURATION -o /app/build
